Fix the spacing in the footer

--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,7 @@ img {
 
 footer {
     height: 2rem;
+    line-height: 2rem;
     text-align: center;
     background: lightgrey;
 }
